--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/style.css">
-  <link rel="icon" href="img/flowers.png" type="image/x-icon">
-  <title>flowers</title>
+  <link rel="icon" href="icon/heart.png" sizes="16x16" type="image/png">
+  <title>Te amo</title>
 
 </head>
 
